brat/test/golden/error/remaining-nat-hopes.brat
show(n :: #) -> []
show(_) = []

read([]) -> n :: #
read([]) = 42

bad :: []
bad = let _ = read([]) in show(!)
